# gtf-gff-transition

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
src/gtf_gff_transition/: __init__.py  cellranger.py  cli.py  convert.py  model.py  parsing.py  validate_cellranger.py
tests/: test_cellranger.py  test_cli.py  test_conversion.py  test_public_api.py  test_validate_cellranger.py
