[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtf-gff-transition"
version = "0.1.0"
description = "Bidirectional GTF/GFF3 conversion with Cell Ranger-oriented GTF build and validation tools"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "hanzhang" }
]
keywords = ["bioinformatics", "gtf", "gff3", "cellranger", "genomics", "annotation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = []

[project.scripts]
gtf-gff-transition = "gtf_gff_transition.cli:main"
gtf-gff-cellranger = "gtf_gff_transition.cellranger:main"
gtf-gff-validate-cellranger = "gtf_gff_transition.validate_cellranger:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gtf_gff_transition = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
